# Claude_arpitraasi

./: LICENSE  Makefile  README.md  app.py  push_to_github.ps1  push_to_github.sh  pyproject.toml
src/veikkaus_odds_monitor/: __init__.py  arb_monitor.py  arbitrage.py  cli.py  client.py  config.py  db.py  diagnostics.py  external_odds.py  monitor.py  normalize.py  notifier.py  outrights.py  parser.py  veikkaus_adapter.py  world_cup.py
tests/: test_arbitrage.py  test_external_arbitrage.py  test_outrights.py  test_parser.py  test_veikkaus_adapter.py  test_world_cup.py
